--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ footer { background: #0073e6; color: white; text-align: center; padding: 10px; m
 
 <!-- Botón que redirige a otra página -->
 <button onclick="window.location.href='https://0x1bir-fernando-mejia.shinyapps.io/Webapp1/';">Ir a Ejemplo</button>
-<img src="imagen.jpg" alt="Descripción de la imagen" width="600">
+<img src="imagen1.jpg" alt="Descripción de la imagen" width="600">
 <p>Esta es una página de ejemplo con videos y documentos PDF.</p>
 
 <h2>Video Informativo</h2>
@@ -45,7 +45,7 @@ footer { background: #0073e6; color: white; text-align: center; padding: 10px; m
 <tr>
 <!-- Imagen en el lado izquierdo -->
 <td align="center" width="50%">
-<img src="imagen.jpg" alt="Imagen Descriptiva" width="300">
+<img src="imagen1.jpg" alt="Imagen Descriptiva" width="300">
 </td>
 
 <!-- Video en el lado derecho -->
